# dot

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
.kiro/: .gitignore
Formula/: dot.rb
docs/: README.md  README_zh.md  examples.md  troubleshooting.md
src/: atomic.rs  config.rs  error.rs  git_operations.rs  git_proxy.rs  github.rs  index.rs  lib.rs  main.rs  repository.rs  setup.rs
